Spacing issue

--- a/site/static/styles.css
+++ b/site/static/styles.css
@@ -6,6 +6,10 @@ h5 {
     letter-spacing: 2px;
 }
 
+.percent__int {
+    letter-spacing: 2px;
+}
+
 .btn-outline-success {
     color: #93c47d;
     border-color: #93c47d;
